<resources>
    <string name="app_name">PointGrapher</string>

    <!-- Main screen -->
    <string name="main_screen_explanation">Request the coordinates of points from the server and displays them in the form of a table and graph</string>
    <string name="main_screen_input_label">Enter the number of points</string>
    <string name="main_screen_button_go">GO!</string>
    <string name="main_screen_button_go_again">Go again!</string>
    <string name="main_screen_try_again">please try again</string>
    <string name="main_screen_batch_list_title">List of previous batches</string>
    <string name="main_screen_error_occurred">Error occurred while request points</string>
    <string name="main_screen_error_empty_points_number">Request points number can\'t be empty</string>
    <string name="main_screen_error_invalid_format">Invalid format</string>
    <string name="main_screen_error_must_be_number">Must be a number</string>
    <string name="main_screen_error_too_high_value">Maximum 1000 points allowed</string>
    <string name="main_screen_error_too_low_value">Must be at least 1 point</string>
    <string name="main_screen_error_something_happened_during_request">Something happened during request</string>
    <string name="main_screen_error_server_incorrect_points">Server returned incorrect points number error. Value either too big or too small.</string>
    <string name="main_screen_error_general">Something went wrong</string>
    <string name="main_screen_text_field_prefix">"Request: "</string>
    <string name="main_screen_text_field_suffix">points</string>

    <!-- Result screen -->
    <string name="result_screen_title">Points batch result</string>
</resources>