<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/compat"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/main_screen_explanation"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pointCountTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="Enter number of points"
            app:errorEnabled="true"
            app:helperText="@string/main_screen_text_field_prefix"
            app:suffixText="@string/main_screen_text_field_suffix">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pointCountTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/requestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/main_screen_button_go"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/batchesTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/main_screen_batch_list_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBatches"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>
</FrameLayout>